--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,8 @@
 <resources>
     <string name="app_name">My Application</string>
+    <string name="accident_history_title">최근 사고 기록</string>
+    <string name="accident_history_empty">기록이 아직 없습니다.</string>
+    <string name="accident_history_status_pending">처리 대기</string>
+    <string name="accident_history_status_handled">처리 완료</string>
+    <string name="accident_history_status_suppressed">중복 감지 무시됨</string>
 </resources>
